src/sass/footer.scss
footer {

  justify-content: center;
  align-items: center;
  background: #000;
  width: 100%;
  color: white;
  position: absolute;
  bottom: -35vh;
  z-index: -1;

  padding: 5em;

  .container {
    grid-template-columns: repeat(6, 1fr);
    grid-template-rows: 1fr;
  }

  .logo,
  .nav,
  .social {
    grid-column: span 2;
    align-self: center;
    justify-self: center;

  }

  .nav {
    a {
      color: white;
      text-decoration: none;
      font-size: 1.2em;
    }

    li {
      padding: 1em 0;
    }
  }

  .social {
    font-size: 1.2em;
    text-align: center;
    line-height: 1.4em;

    a {
      color: white;
    }

    .icons{

      margin-bottom: 1em;

      svg {
        margin: 0 10px;
      }
    }
  }

  .logo {
    flex-direction: column;
  }
}

